# trash-panda-robocop

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: backyard-gate-example.yaml  default.yaml  simulation.yaml
deploy/systemd/: trash-panda-robocop.service
docs/: accessories.md  agents.md  architecture.md  deployment.md  fleet-sentry.md  hardware.md  local-dev.md  mentorpi-software-reuse.md  mentorpi-starter-kit.md  opencclaw-integration.md  operations.md  production-checklist.md  safety-policy.md  security-architecture.md  strategy-evaluation.md
integrations/opencclaw/: openclaw.mac-mini-agent.sample.json  openclaw.sample.json
integrations/opencclaw/mac-mini-agent/: AGENTS.md  HEARTBEAT.md  README.md  SOUL.md  TOOLS.md  install.sh
integrations/opencclaw/mac-mini-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
scripts/: lint_test.sh  mentorpi_audit.sh  run_local.sh  simulate_night.sh
src/raccoon_guardian/: __init__.py  app.py  config.py  logging.py  state_machine.py
src/raccoon_guardian/actuators/: __init__.py  base.py  light.py  pan.py  (+3 more)
tests/: test_agents.py  test_api.py  test_config.py  test_controller.py  test_fleet.py  test_mentorpi_integration.py  test_perception_capture.py  test_reporting.py  test_safety_policy.py  test_scheduler.py  test_simulation.py  test_strategies.py  test_zone_logic.py
(+41 files in other folders)
