[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "raccoon-guardian"
version = "0.1.0"
description = "Simulation-first, humane perimeter deterrence starter kit for backyard wildlife entry events."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Open Source Contributors" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0",
  "opencv-python-headless>=4.10",
  "httpx>=0.27,<1.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.11",
  "types-PyYAML>=6.0",
]

[project.scripts]
raccoon-guardian = "raccoon_guardian.app:main"
raccoon-guardian-sim = "raccoon_guardian.simulation.replay:main"

[tool.hatch.build.targets.wheel]
packages = ["src/raccoon_guardian"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_any_generics = true
namespace_packages = true
mypy_path = ["src"]

[tool.uv]
package = true
